<resources>
    <string name="app_name">Instagram Project</string>

    <!--default error-->
    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time</string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="network_login_again">Please log in again</string>

    <!--login & register-->
    <string name="name_field_hint">Enter your name</string>
    <string name="email_field_hint">Enter your email</string>
    <string name="password_field_hint">Enter your password</string>
    <string name="name_field_empty">Name can\'t be empty</string>
    <string name="email_field_empty">Email can\'t be empty</string>
    <string name="password_field_empty">Password can\'t be empty</string>
    <string name="name_field_small_length">Name less than 3 digits</string>
    <string name="email_field_invalid">Not a valid email</string>
    <string name="password_field_small_length">Password less than 6 digits</string>
    <string name="signup_with_email_text">Sign Up with Email</string>
    <string name="login_with_email_text">Login with Email</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="or_text">OR</string>

    <!--main-->
    <string name="home_screen">HOME</string>
    <string name="menu_home">Home</string>
    <string name="photo_screen">PHOTO</string>
    <string name="menu_photo">Add Photos</string>
    <string name="profile_screen">PROFILE</string>
    <string name="menu_profile">Profile</string>

    <!--posts-->
    <string name="post_like_label">%1d Likes</string>
    
    <!--profile-->
    <string name="edit_profile">Edit Profile</string>
    <string name="logout_button_text">Logout</string>
    <string name="posts_label"><![CDATA[<b>%1d</b> Posts]]></string>
    <string name="save">Save</string>
    <string name="saving_profile">Saving profile, please wait …</string>
    <string name="change_photo">Change Photo</string>
    <string name="name_text">Name</string>
    <string name="email_text">Email</string>
    <string name="bio_text">Bio</string>
    <string name="private_information">Private Information</string>

    <!--photo-->
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="try_again">Please try again</string>

</resources>
