<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_home"
        android:title="@string/menu_home"
        android:titleCondensed="@string/menu_home"
        android:icon="@drawable/selector_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_add_photos"
        android:title="@string/menu_photo"
        android:titleCondensed="@string/menu_photo"
        android:icon="@drawable/selector_add_photos"
        app:showAsAction="always" />

    <item android:id="@+id/item_profile"
        android:title="@string/menu_profile"
        android:titleCondensed="@string/menu_profile"
        android:icon="@drawable/selector_profile"
        app:showAsAction="always" />
</menu>