<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp">

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription"
        tools:src="@drawable/ic_profile_signup"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/tvName"
        style="@style/AppTheme.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lines="1"
        android:ellipsize="end"
        android:textStyle="bold"
        tools:text="Placeholder Name"
        app:layout_constraintStart_toStartOf="@id/ivProfile"
        app:layout_constraintEnd_toEndOf="@id/ivProfile"
        app:layout_constraintTop_toBottomOf="@id/ivProfile"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/bt_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_button_text"
        android:textColor="@color/black"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/tvPostsCount"
        style="@style/AppTheme.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        tools:text="@string/posts_label"
        app:layout_constraintStart_toEndOf="@+id/ivProfile"
        app:layout_constraintTop_toBottomOf="@+id/bt_logout"
        android:layout_marginStart="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_edit_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPostsCount"
        app:layout_constraintStart_toEndOf="@id/ivProfile"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tvTagline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        tools:text="I am passionate Android Developer and I aim to reach high and touch the sky."/>

</androidx.constraintlayout.widget.ConstraintLayout>