<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:title="@string/edit_profile"
            app:navigationIcon="@drawable/ic_cancel"
            app:menu="@menu/top_app_bar" />

    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:id="@+id/viewShadow"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@drawable/shadow"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/viewShadow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@drawable/ic_profile_add_pic"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/bt_change_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/change_photo"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfile" />

    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/bt_change_photo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="36dp"
        android:layout_marginStart="30dp"
        android:text="@string/name_text"
        android:textColor="@color/grey"
        android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="30dp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/label_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:boxBackgroundColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:lines="1"
            android:maxLength="250"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:hint="@string/name_text"
            android:paddingTop="10dp"
            tools:text="Test Mindorks" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/label_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layout_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        android:text="@string/bio_text"
        android:textColor="@color/grey"
        android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="30dp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/label_bio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:boxBackgroundColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="1"
            android:maxLength="250"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingTop="10dp"
            android:hint="@string/bio_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_bio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        android:layout_gravity="center_vertical" />

    <TextView
        android:id="@+id/label_private_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        android:text="@string/private_information"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label_private_information"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="14dp"
        android:layout_marginStart="30dp"
        android:text="@string/email_text"
        android:textColor="@color/grey"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@+id/label_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:boxBackgroundColor="@color/white"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLength="250"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:enabled="false"
            android:paddingTop="10dp"
            tools:text="test@mindorks.com" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>